--- a/main.css
+++ b/main.css
@@ -14,7 +14,8 @@ body {
   color: whitesmoke;
 }
 
-a.dark {
+a.dark,
+h1.dark {
   color: whitesmoke;
 }
 
@@ -42,6 +43,11 @@ section.dark {
   display: flex;
   justify-content: flex-end;
   margin: 10px;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
 }
 
 a {
